--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/videojs-vtt-thumbnails.cjs.js",
   "module": "dist/videojs-vtt-thumbnails.es.js",
   "engines": {
-    "node": ">=10"
+    "node": "^18.14"
   },
   "repository": {
     "type": "git",
@@ -92,15 +92,15 @@
     "eslint": "^7.0.0",
     "husky": "^0.13.3",
     "jsdoc": "^3.6.4",
-    "karma": "^1.7.0",
-    "karma-chrome-launcher": "^2.1.1",
+    "karma": "^6.4.1",
+    "karma-chrome-launcher": "^3.1.1",
     "karma-detect-browsers": "^2.3.3",
-    "karma-firefox-launcher": "^1.3.0",
+    "karma-firefox-launcher": "^2.1.2",
     "karma-ie-launcher": "^1.0.0",
-    "karma-qunit": "^1.2.1",
+    "karma-qunit": "^4.1.2",
     "karma-safari-launcher": "^1.0.0",
     "mkdirp": "^0.5.5",
-    "node-sass": "^4.14.1",
+    "node-sass": "^8.0.0",
     "node-static": "^0.7.11",
     "npm-run-all": "^4.1.5",
     "qunitjs": "^2.3.2",
